--- a/analysis/Rynelle/milestone1.ipynb/analysis.rynelle.milestone1.ipynb
+++ b/analysis/Rynelle/milestone1.ipynb/analysis.rynelle.milestone1.ipynb
@@ -2,27 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "brown-plant",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FISCAL_YEAR</th>\n",
+       "      <th>HEALTH_AUTHORITY</th>\n",
+       "      <th>HOSPITAL_NAME</th>\n",
+       "      <th>PROCEDURE_GROUP</th>\n",
+       "      <th>WAITING</th>\n",
+       "      <th>COMPLETED</th>\n",
+       "      <th>COMPLETED_50TH_PERCENTILE</th>\n",
+       "      <th>COMPLETED_90TH_PERCENTILE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Abdominoplasty</td>\n",
+       "      <td>52</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>42.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>All Other Procedures</td>\n",
+       "      <td>1,347</td>\n",
+       "      <td>6,287</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>17.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>All Procedures</td>\n",
+       "      <td>72,056</td>\n",
+       "      <td>219,284</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>24.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Aortic Aneurysm Repair</td>\n",
+       "      <td>96</td>\n",
+       "      <td>365</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>13.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Appendectomy</td>\n",
+       "      <td>19</td>\n",
+       "      <td>88</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>9.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  FISCAL_YEAR        HEALTH_AUTHORITY   HOSPITAL_NAME         PROCEDURE_GROUP  \\\n",
+       "0     2009/10  All Health Authorities  All Facilities          Abdominoplasty   \n",
+       "1     2009/10  All Health Authorities  All Facilities    All Other Procedures   \n",
+       "2     2009/10  All Health Authorities  All Facilities          All Procedures   \n",
+       "3     2009/10  All Health Authorities  All Facilities  Aortic Aneurysm Repair   \n",
+       "4     2009/10  All Health Authorities  All Facilities            Appendectomy   \n",
+       "\n",
+       "  WAITING COMPLETED  COMPLETED_50TH_PERCENTILE  COMPLETED_90TH_PERCENTILE  \n",
+       "0      52       100                        9.1                       42.6  \n",
+       "1   1,347     6,287                        4.0                       17.1  \n",
+       "2  72,056   219,284                        5.3                       24.3  \n",
+       "3      96       365                        3.7                       13.5  \n",
+       "4      19        88                        3.7                        9.1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv('analysis/Rynelle/milestone1.ipynb/2009_2020-annual-surgical_wait_times.csv')"
+    "waitdata_raw = pd.read_csv('2009_2020-annual-surgical_wait_times.csv')\n",
+    "waitdata_raw.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "great-devices",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "electrical-crest",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30,13 +133,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
