changes to scripts

--- a/analysis/Akshaj/milestone2.pnb/milestone2.ipynb
+++ b/analysis/Akshaj/milestone2.pnb/milestone2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "exclusive-blocking",
+   "id": "higher-hartford",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "opposed-knife",
+   "id": "multiple-refund",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "imperial-composition",
+   "id": "going-valley",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "narrative-groove",
+   "id": "secret-consideration",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "little-workstation",
+   "id": "rough-explosion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "italic-greene",
+   "id": "honey-direction",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "clear-shopper",
+   "id": "above-scholarship",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "failing-aluminum",
+   "id": "wrapped-customs",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "acknowledged-consumer",
+   "id": "informal-investigator",
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "streaming-phone",
+   "id": "dietary-intermediate",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "assisted-dairy",
+   "id": "stock-seller",
    "metadata": {},
    "outputs": [
     {
@@ -1482,8 +1482,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "stuck-basketball",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-c434514a25f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mproject_functions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mproject_functions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_and_process\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'2009_2020-annual-surgical_wait_times.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
+   "source": [
+    "from .. import project_functions\n",
+    "df = project_functions.load_and_process('2009_2020-annual-surgical_wait_times.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "lyric-toyota",
+   "id": "advance-survey",
    "metadata": {},
    "outputs": [],
    "source": []
