--- a/analysis/Monica/milestone1.ipynb/analysis.monica.milestone1.ipynb
+++ b/analysis/Monica/milestone1.ipynb/analysis.monica.milestone1.ipynb
@@ -5839,9 +5839,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "workenv",
    "language": "python",
-   "name": "python3"
+   "name": "workenv"
   },
   "language_info": {
    "codemirror_mode": {
