Added Script folder to Monica analysis

--- a/analysis/Monica/milestone1.ipynb/analysis.monica.milestone1.ipynb
+++ b/analysis/Monica/milestone1.ipynb/analysis.monica.milestone1.ipynb
@@ -220,6 +220,442 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FISCAL_YEAR</th>\n",
+       "      <th>HEALTH_AUTHORITY</th>\n",
+       "      <th>HOSPITAL_NAME</th>\n",
+       "      <th>PROCEDURE_GROUP</th>\n",
+       "      <th>WAITING</th>\n",
+       "      <th>COMPLETED</th>\n",
+       "      <th>COMPLETED_50TH_PERCENTILE</th>\n",
+       "      <th>COMPLETED_90TH_PERCENTILE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Abdominoplasty</td>\n",
+       "      <td>52</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>42.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>All Other Procedures</td>\n",
+       "      <td>1,347</td>\n",
+       "      <td>6,287</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>17.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>All Procedures</td>\n",
+       "      <td>72,056</td>\n",
+       "      <td>219,284</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>24.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Aortic Aneurysm Repair</td>\n",
+       "      <td>96</td>\n",
+       "      <td>365</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>13.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Appendectomy</td>\n",
+       "      <td>19</td>\n",
+       "      <td>88</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>9.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Breast Reduction</td>\n",
+       "      <td>252</td>\n",
+       "      <td>175</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>76.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Cholecystectomy</td>\n",
+       "      <td>74</td>\n",
+       "      <td>237</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>20.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Colostomy/Ileostomy</td>\n",
+       "      <td>&lt;5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>19.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Cone Biopsy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Cyst/Ganglion Removal</td>\n",
+       "      <td>&lt;5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>13.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FISCAL_YEAR        HEALTH_AUTHORITY  \\\n",
+       "0      2009/10  All Health Authorities   \n",
+       "1      2009/10  All Health Authorities   \n",
+       "2      2009/10  All Health Authorities   \n",
+       "3      2009/10  All Health Authorities   \n",
+       "4      2009/10  All Health Authorities   \n",
+       "..         ...                     ...   \n",
+       "95     2009/10                  Fraser   \n",
+       "96     2009/10                  Fraser   \n",
+       "97     2009/10                  Fraser   \n",
+       "98     2009/10                  Fraser   \n",
+       "99     2009/10                  Fraser   \n",
+       "\n",
+       "                                     HOSPITAL_NAME         PROCEDURE_GROUP  \\\n",
+       "0                                   All Facilities          Abdominoplasty   \n",
+       "1                                   All Facilities    All Other Procedures   \n",
+       "2                                   All Facilities          All Procedures   \n",
+       "3                                   All Facilities  Aortic Aneurysm Repair   \n",
+       "4                                   All Facilities            Appendectomy   \n",
+       "..                                             ...                     ...   \n",
+       "95  Abbotsford Regional Hospital And Cancer Centre        Breast Reduction   \n",
+       "96  Abbotsford Regional Hospital And Cancer Centre         Cholecystectomy   \n",
+       "97  Abbotsford Regional Hospital And Cancer Centre     Colostomy/Ileostomy   \n",
+       "98  Abbotsford Regional Hospital And Cancer Centre             Cone Biopsy   \n",
+       "99  Abbotsford Regional Hospital And Cancer Centre   Cyst/Ganglion Removal   \n",
+       "\n",
+       "   WAITING COMPLETED  COMPLETED_50TH_PERCENTILE  COMPLETED_90TH_PERCENTILE  \n",
+       "0       52       100                        9.1                       42.6  \n",
+       "1    1,347     6,287                        4.0                       17.1  \n",
+       "2   72,056   219,284                        5.3                       24.3  \n",
+       "3       96       365                        3.7                       13.5  \n",
+       "4       19        88                        3.7                        9.1  \n",
+       "..     ...       ...                        ...                        ...  \n",
+       "95     252       175                       32.0                       76.8  \n",
+       "96      74       237                        8.0                       20.6  \n",
+       "97      <5         9                        4.6                       19.8  \n",
+       "98       0        <5                        NaN                        NaN  \n",
+       "99      <5         6                        5.4                       13.4  \n",
+       "\n",
+       "[100 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "waitdata_raw = pd.read_csv('2009_2020-annual-surgical_wait_times.csv')\n",
+    "waitdata_raw.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FISCAL_YEAR</th>\n",
+       "      <th>HEALTH_AUTHORITY</th>\n",
+       "      <th>HOSPITAL_NAME</th>\n",
+       "      <th>PROCEDURE_GROUP</th>\n",
+       "      <th>WAITING</th>\n",
+       "      <th>COMPLETED</th>\n",
+       "      <th>COMPLETED_50TH_PERCENTILE</th>\n",
+       "      <th>COMPLETED_90TH_PERCENTILE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Abdominoplasty</td>\n",
+       "      <td>52</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>42.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>All Other Procedures</td>\n",
+       "      <td>1,347</td>\n",
+       "      <td>6,287</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>17.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>All Procedures</td>\n",
+       "      <td>72,056</td>\n",
+       "      <td>219,284</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>24.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Aortic Aneurysm Repair</td>\n",
+       "      <td>96</td>\n",
+       "      <td>365</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>13.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>All Health Authorities</td>\n",
+       "      <td>All Facilities</td>\n",
+       "      <td>Appendectomy</td>\n",
+       "      <td>19</td>\n",
+       "      <td>88</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>9.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Breast Reduction</td>\n",
+       "      <td>252</td>\n",
+       "      <td>175</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>76.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Cholecystectomy</td>\n",
+       "      <td>74</td>\n",
+       "      <td>237</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>20.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Colostomy/Ileostomy</td>\n",
+       "      <td>&lt;5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>19.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Cone Biopsy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>2009/10</td>\n",
+       "      <td>Fraser</td>\n",
+       "      <td>Abbotsford Regional Hospital And Cancer Centre</td>\n",
+       "      <td>Cyst/Ganglion Removal</td>\n",
+       "      <td>&lt;5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>13.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FISCAL_YEAR        HEALTH_AUTHORITY  \\\n",
+       "0      2009/10  All Health Authorities   \n",
+       "1      2009/10  All Health Authorities   \n",
+       "2      2009/10  All Health Authorities   \n",
+       "3      2009/10  All Health Authorities   \n",
+       "4      2009/10  All Health Authorities   \n",
+       "..         ...                     ...   \n",
+       "95     2009/10                  Fraser   \n",
+       "96     2009/10                  Fraser   \n",
+       "97     2009/10                  Fraser   \n",
+       "98     2009/10                  Fraser   \n",
+       "99     2009/10                  Fraser   \n",
+       "\n",
+       "                                     HOSPITAL_NAME         PROCEDURE_GROUP  \\\n",
+       "0                                   All Facilities          Abdominoplasty   \n",
+       "1                                   All Facilities    All Other Procedures   \n",
+       "2                                   All Facilities          All Procedures   \n",
+       "3                                   All Facilities  Aortic Aneurysm Repair   \n",
+       "4                                   All Facilities            Appendectomy   \n",
+       "..                                             ...                     ...   \n",
+       "95  Abbotsford Regional Hospital And Cancer Centre        Breast Reduction   \n",
+       "96  Abbotsford Regional Hospital And Cancer Centre         Cholecystectomy   \n",
+       "97  Abbotsford Regional Hospital And Cancer Centre     Colostomy/Ileostomy   \n",
+       "98  Abbotsford Regional Hospital And Cancer Centre             Cone Biopsy   \n",
+       "99  Abbotsford Regional Hospital And Cancer Centre   Cyst/Ganglion Removal   \n",
+       "\n",
+       "   WAITING COMPLETED  COMPLETED_50TH_PERCENTILE  COMPLETED_90TH_PERCENTILE  \n",
+       "0       52       100                        9.1                       42.6  \n",
+       "1    1,347     6,287                        4.0                       17.1  \n",
+       "2   72,056   219,284                        5.3                       24.3  \n",
+       "3       96       365                        3.7                       13.5  \n",
+       "4       19        88                        3.7                        9.1  \n",
+       "..     ...       ...                        ...                        ...  \n",
+       "95     252       175                       32.0                       76.8  \n",
+       "96      74       237                        8.0                       20.6  \n",
+       "97      <5         9                        4.6                       19.8  \n",
+       "98       0        <5                        NaN                        NaN  \n",
+       "99      <5         6                        5.4                       13.4  \n",
+       "\n",
+       "[100 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "waitdata_raw = pd.read_csv('2009_2020-annual-surgical_wait_times.csv')\n",
+    "waitdata_raw.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
