--- a/analysis/Akshaj/milestone1.pnb/milestone1.ipynb
+++ b/analysis/Akshaj/milestone1.pnb/milestone1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "obvious-rachel",
+   "id": "attended-proof",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "widespread-polyester",
+   "id": "incomplete-springer",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -229,9 +229,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "workenv",
    "language": "python",
-   "name": "python3"
+   "name": "workenv"
   },
   "language_info": {
    "codemirror_mode": {
