Functions to remove duplicate data

--- a/analysis/Akshaj/milestone2.pnb/milestone2.ipynb
+++ b/analysis/Akshaj/milestone2.pnb/milestone2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "protecting-literacy",
+   "id": "quantitative-dealer",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "invalid-passenger",
+   "id": "marked-batman",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "latin-stations",
+   "id": "annual-commercial",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ultimate-mounting",
+   "id": "drawn-consolidation",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "imposed-japan",
+   "id": "fleet-lemon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "reliable-bottom",
+   "id": "fatty-editor",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ignored-pointer",
+   "id": "offensive-passenger",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fiscal-laser",
+   "id": "checked-latest",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "regular-boutique",
+   "id": "emerging-idaho",
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "surrounded-reconstruction",
+   "id": "exceptional-reflection",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "laden-sharp",
+   "id": "understood-theory",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "touched-breach",
+   "id": "unique-transportation",
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recent-usage",
+   "id": "tribal-alexandria",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1515,9 +1515,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "workenv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "workenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
